<resources>
    <string name="app_name">SJAT</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_address">Address</string>
    <string name="action_new_customer">New Customer</string>
    <string name="action_employees">Employess</string>
    <string name="action_items">Items</string>
    <string name="action_pay_methods">Pay Methods</string>
    <string name="action_prices_form">Prices</string>
    <string name="action_backup_restore">Backup Restore</string>

    <string name="menu_home">Home</string>
    <string name="menu_customers">Customers</string>
    <string name="menu_ovens">Ovens</string>
    <string name="menu_record_form">Record Form</string>
    <string name="menu_client_form">Client Form</string>
    <string name="menu_oven_form">Oven Form</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>