<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.sajjadsjat.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_clients"
        android:name="com.sajjadsjat.ui.ClientsFragment"
        android:label="@string/menu_clients"
        tools:layout="@layout/fragment_clients" />

    <fragment
        android:id="@+id/nav_ovens"
        android:name="com.sajjadsjat.ui.OvensFragment"
        android:label="@string/menu_ovens"
        tools:layout="@layout/fragment_ovens" />

    <fragment
        android:id="@+id/nav_record_form"
        android:name="com.sajjadsjat.ui.forms.RecordFormFragment"
        android:label="@string/menu_record_form"
        tools:layout="@layout/fragment_record_form" />

    <fragment
        android:id="@+id/nav_payment_form"
        android:name="com.sajjadsjat.ui.forms.PaymentFormFragment"
        android:label="@string/menu_payment_form"
        tools:layout="@layout/fragment_payment_form" />

    <fragment
        android:id="@+id/nav_client_form"
        android:name="com.sajjadsjat.ui.forms.ClientFormFragment"
        android:label="@string/menu_client_form"
        tools:layout="@layout/fragment_client_form" />

    <fragment
        android:id="@+id/nav_oven_form"
        android:name="com.sajjadsjat.ui.forms.OvenFormFragment"
        android:label="@string/menu_oven_form"
        tools:layout="@layout/fragment_oven_form" />
</navigation>